@@ -108,7 +108,7 @@ my $DEBUG_SQL = 0;
 
 # this may not be the current version of eprints, it's the version
 # of eprints where the current desired db configuration became standard.
-$EPrints::Database::DBVersion = "3.1.0";
+$EPrints::Database::DBVersion = "3.1.1";
 
 # cjg not using transactions so there is a (very small) chance of
 # dupping on a counter. 
